--- a/matriks/ulangan/xiips2.html
+++ b/matriks/ulangan/xiips2.html
@@ -54,49 +54,46 @@
             <div class="row justify-content-center">
                 <h3 class="text-center"> Silahkan klik link pada nama kalian masing-masing untuk mengakses soal ulangan </h3>
                 <div class="col-md-8">
-<div class="list-group">
-    <button type="button" class="list-group-item list-group-item-action active text-center" aria-current="true">
+                  <div class="list-group">
+                    <button type="button" class="list-group-item list-group-item-action active text-center fw-bold" aria-current="true">
       NAMA KELAS XI IPS 2
     </button>
-        <a href="	/matriks/ulangan/	FzVNHsWxXE.html	"> <button type="button" class="list-group-item list-group-item-action">	ANAK AGUNG ADISTYA DAMAYANTI	</a>
-        <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	"> <button type="button" class="list-group-item list-group-item-action">	ANAK AGUNG GEDE NGURAH	</a>
-        <a href="	/matriks/ulangan/	TjpG3x9qyM.html	"> <button type="button" class="list-group-item list-group-item-action">	DEWA AYU INTAN CANDRIKA DEWI	</a>
-        <a href="	/matriks/ulangan/	TpEmXQcxqD.html	"> <button type="button" class="list-group-item list-group-item-action">	DEWA AYU WEDA SANTHI MERANGGI	</a>
-        <a href="	/matriks/ulangan/	z4mmaR9xjM.html	"> <button type="button" class="list-group-item list-group-item-action">	DEWA GDE AGUNG KSATRIA PINANDITA	</a>
-        <a href="	/matriks/ulangan/	3WC4Gq6pan.html	"> <button type="button" class="list-group-item list-group-item-action">	DEWA GDE SONI JAGADITA	</a>
-        <a href="	/matriks/ulangan/	5h85TRxZkF.html	"> <button type="button" class="list-group-item list-group-item-action">	DEWA GEDE AGUNG SAHADEWA	</a>
-        <a href="	/matriks/ulangan/	78Xjm6ynZc.html	"> <button type="button" class="list-group-item list-group-item-action">	DEWA GEDE BAGUS ADIWIGUNA	</a>
-        <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	"> <button type="button" class="list-group-item list-group-item-action">	DEWA NYOMAN BAYU PRADNYANA	</a>
-        <a href="	/matriks/ulangan/	EyXYuKEGfq.html	"> <button type="button" class="list-group-item list-group-item-action">	GUSTI AGUNG DHARMA CAHYA ARI MUKTI	</a>
-        <a href="	/matriks/ulangan/	FzVNHsWxXE.html	"> <button type="button" class="list-group-item list-group-item-action">	I DEWA GEDE RAI ARTHA SUYASA	</a>
-        <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	"> <button type="button" class="list-group-item list-group-item-action">	I GEDE PUTRA GILHUAN	</a>
-        <a href="	/matriks/ulangan/	TjpG3x9qyM.html	"> <button type="button" class="list-group-item list-group-item-action">	I GUSTI AYU AMANDA ERNAWATI	</a>
-        <a href="	/matriks/ulangan/	TpEmXQcxqD.html	"> <button type="button" class="list-group-item list-group-item-action">	I GUSTI AYU MAS WIDIA SEMARI	</a>
-        <a href="	/matriks/ulangan/	z4mmaR9xjM.html	"> <button type="button" class="list-group-item list-group-item-action">	I KADEK ANDHIKA SENA PUTRA	</a>
-        <a href="	/matriks/ulangan/	3WC4Gq6pan.html	"> <button type="button" class="list-group-item list-group-item-action">	I KADEK BASKARA	</a>
-        <a href="	/matriks/ulangan/	5h85TRxZkF.html	"> <button type="button" class="list-group-item list-group-item-action">	I KADEK DIVA	</a>
-        <a href="	/matriks/ulangan/	78Xjm6ynZc.html	"> <button type="button" class="list-group-item list-group-item-action">	I KETUT SUDIYASA	</a>
-        <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	"> <button type="button" class="list-group-item list-group-item-action">	I KOMANG ARIANA	</a>
-        <a href="	/matriks/ulangan/	EyXYuKEGfq.html	"> <button type="button" class="list-group-item list-group-item-action">	I WAYAN ARI TAMA	</a>
-        <a href="	/matriks/ulangan/	FzVNHsWxXE.html	"> <button type="button" class="list-group-item list-group-item-action">	IDA AYU DWI ADNYASWARI	</a>
-        <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	"> <button type="button" class="list-group-item list-group-item-action">	IDA AYU PUTU WULAN DARI DEWI	</a>
-        <a href="	/matriks/ulangan/	TjpG3x9qyM.html	"> <button type="button" class="list-group-item list-group-item-action">	KADEK HERY ARIAWAN	</a>
-        <a href="	/matriks/ulangan/	TpEmXQcxqD.html	"> <button type="button" class="list-group-item list-group-item-action">	KADEK MELANIE YUSTIKALOVA WARTANA	</a>
-        <a href="	/matriks/ulangan/	z4mmaR9xjM.html	"> <button type="button" class="list-group-item list-group-item-action">	KOMANG INDRAJAYA PUTRA	</a>
-        <a href="	/matriks/ulangan/	3WC4Gq6pan.html	"> <button type="button" class="list-group-item list-group-item-action">	LUH PUTU JEZA ARINI	</a>
-        <a href="	/matriks/ulangan/	5h85TRxZkF.html	"> <button type="button" class="list-group-item list-group-item-action">	MADE GANGGA DEVI MARUTI	</a>
-        <a href="	/matriks/ulangan/	78Xjm6ynZc.html	"> <button type="button" class="list-group-item list-group-item-action">	NI KADEK FEBRIANTI	</a>
-        <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	"> <button type="button" class="list-group-item list-group-item-action">	NI KADEK TESA WIDIANTARI	</a>
-        <a href="	/matriks/ulangan/	EyXYuKEGfq.html	"> <button type="button" class="list-group-item list-group-item-action">	NI KOMANG ULANDARI	</a>
-        <a href="	/matriks/ulangan/	FzVNHsWxXE.html	"> <button type="button" class="list-group-item list-group-item-action">	NYOMAN MAYRA RISKA DAMAYANTI	</a>
-        <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	"> <button type="button" class="list-group-item list-group-item-action">	PANDE PUTU ARCELLO ADHICHANDRA	</a>
-        <a href="	/matriks/ulangan/	TjpG3x9qyM.html	"> <button type="button" class="list-group-item list-group-item-action">	PUTU BAGAS PRADNYANA	</a>
-        <a href="	/matriks/ulangan/	TpEmXQcxqD.html	"> <button type="button" class="list-group-item list-group-item-action">	PUTU GEDE BAYU SETIAWAN	</a>
-        <a href="	/matriks/ulangan/	z4mmaR9xjM.html	"> <button type="button" class="list-group-item list-group-item-action">	SATRIYA PRAJNA CHIDANANDA	</a>
-        
-        
-  </div>
-
+    <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	01.&nbsp;&nbsp;&nbsp;ANAK AGUNG ADISTYA DAMAYANTI	</a>
+      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	02.&nbsp;&nbsp;&nbsp;ANAK AGUNG GEDE NGURAH	</a>
+      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	03.&nbsp;&nbsp;&nbsp;DEWA AYU INTAN CANDRIKA DEWI	</a>
+      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	04.&nbsp;&nbsp;&nbsp;DEWA AYU WEDA SANTHI MERANGGI	</a>
+      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	05.&nbsp;&nbsp;&nbsp;DEWA GDE AGUNG KSATRIA PINANDITA	</a>
+      <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	06.&nbsp;&nbsp;&nbsp;DEWA GDE SONI JAGADITA	</a>
+      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	07.&nbsp;&nbsp;&nbsp;DEWA GEDE AGUNG SAHADEWA	</a>
+      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	08.&nbsp;&nbsp;&nbsp;DEWA GEDE BAGUS ADIWIGUNA	</a>
+      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	09.&nbsp;&nbsp;&nbsp;DEWA NYOMAN BAYU PRADNYANA	</a>
+      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	10.&nbsp;&nbsp;&nbsp;GUSTI AGUNG DHARMA CAHYA ARI MUKTI	</a>
+      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	11.&nbsp;&nbsp;&nbsp;I DEWA GEDE RAI ARTHA SUYASA	</a>
+      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	12.&nbsp;&nbsp;&nbsp;I GEDE PUTRA GILHUAN	</a>
+      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	13.&nbsp;&nbsp;&nbsp;I GUSTI AYU AMANDA ERNAWATI	</a>
+      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	14.&nbsp;&nbsp;&nbsp;I GUSTI AYU MAS WIDIA SEMARI	</a>
+      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	15.&nbsp;&nbsp;&nbsp;I KADEK ANDHIKA SENA PUTRA	</a>
+      <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	16.&nbsp;&nbsp;&nbsp;I KADEK BASKARA	</a>
+      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	17.&nbsp;&nbsp;&nbsp;I KADEK DIVA	</a>
+      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	18.&nbsp;&nbsp;&nbsp;I KETUT SUDIYASA	</a>
+      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	19.&nbsp;&nbsp;&nbsp;I KOMANG ARIANA	</a>
+      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	20.&nbsp;&nbsp;&nbsp;I WAYAN ARI TAMA	</a>
+      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	21.&nbsp;&nbsp;&nbsp;IDA AYU DWI ADNYASWARI	</a>
+      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	22.&nbsp;&nbsp;&nbsp;IDA AYU PUTU WULAN DARI DEWI	</a>
+      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	23.&nbsp;&nbsp;&nbsp;KADEK HERY ARIAWAN	</a>
+      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	24.&nbsp;&nbsp;&nbsp;KADEK MELANIE YUSTIKALOVA WARTANA	</a>
+      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	25.&nbsp;&nbsp;&nbsp;KOMANG INDRAJAYA PUTRA	</a>
+      <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	26.&nbsp;&nbsp;&nbsp;LUH PUTU JEZA ARINI	</a>
+      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	27.&nbsp;&nbsp;&nbsp;MADE GANGGA DEVI MARUTI	</a>
+      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	28.&nbsp;&nbsp;&nbsp;NI KADEK FEBRIANTI	</a>
+      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	29.&nbsp;&nbsp;&nbsp;NI KADEK TESA WIDIANTARI	</a>
+      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	30.&nbsp;&nbsp;&nbsp;NI KOMANG ULANDARI	</a>
+      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	31.&nbsp;&nbsp;&nbsp;NYOMAN MAYRA RISKA DAMAYANTI	</a>
+      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	32.&nbsp;&nbsp;&nbsp;PANDE PUTU ARCELLO ADHICHANDRA	</a>
+      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	33.&nbsp;&nbsp;&nbsp;PUTU BAGAS PRADNYANA	</a>
+      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	34.&nbsp;&nbsp;&nbsp;PUTU GEDE BAYU SETIAWAN	</a>
+      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	35.&nbsp;&nbsp;&nbsp;SATRIYA PRAJNA CHIDANANDA	</a> 
+                </div>
                 </div>
             </div>
         </div>
