--- a/matriks/ulangan/TpEmXQcxqD.html
+++ b/matriks/ulangan/TpEmXQcxqD.html
@@ -40,8 +40,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/xiips1.html">HOME XI IPS 1</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">HALAMAN </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="/matriks/ulangan/xiips1.html">XI IPS 1</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/matriks/ulangan/xiips2.html">XI IPS 2</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/matriks/ulangan/xiips3.html">XI IPS 3</a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
