--- a/matriks/penerapan.html
+++ b/matriks/penerapan.html
@@ -172,7 +172,7 @@
 
     <!-- end tombol bawah -->
     <!-- footer start -->
-    <footer class="bg-primary text-center text-white fixed-bottom">
+    <footer class="bg-primary text-center text-white d-flex justify-content-center">
       <p>
         Created with
         <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
