--- a/transformasi/rotasi.html
+++ b/transformasi/rotasi.html
@@ -202,7 +202,7 @@ $$\begin{pmatrix}x' \\ y' \end{pmatrix}=\begin{pmatrix}\cos \alpha & -\sin \alph
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- footer start -->
-    <footer class="bg-primary text-center text-white p-1">
+    <footer class="bg-primary text-center text-white d-flex justify-content-center">
       <p>
         Created with
         <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
