--- a/matriks/soal/soalmatriks4.html
+++ b/matriks/soal/soalmatriks4.html
@@ -26,7 +26,7 @@
     <!-- mathjax -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-
+    <link rel="stylesheet" href="style.css" />
     <title>soal matriks (IV)</title>
   </head>
   <body id="home">
@@ -53,7 +53,7 @@
     <!-- navbar end -->
 
        <!-- START FORM KUIS -->
-    <section id="kontak" style="padding-top: 2rem">
+    <section id="kontak" style="padding-top: 7rem">
       <div class="container">
         <div class="row mb-3">
           <div class="col text-center">
