--- a/matriks/ulangan/xiips3.html
+++ b/matriks/ulangan/xiips3.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/matriks/">HOME MATRIKS</a>
+              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/">HOME UJIAN</a>
             </li>
           </ul>
         </div>
