--- a/matriks/soal.html
+++ b/matriks/soal.html
@@ -98,7 +98,7 @@
           <a href="/matriks/soal/soalmatriks3.html" class="list-group-item list-group-item-action">Soal Matriks III</a>
           <a href="/matriks/soal/soalmatriks4.html" class="list-group-item list-group-item-action">Soal Matriks IV</a>
           <a href="/matriks/soal/kisikisiulangan.html" class="list-group-item list-group-item-action">Kisi-kisi Ulangan Matriks</a>
-          <a href="/matriks/soal/tugas01.html" class="list-group-item list-group-item-action fw-bold">TUGAS KAMIS, 22/09/2022</a>
+          <a href="/matriks/soal/tugas01.html" class="list-group-item list-group-item-action fw-bold">TUGAS 1</a>
           <a class="list-group-item list-group-item-action disabled">Soal Lainnya</a>
         </div>
       </div>
