--- a/transformasi/latihansoal/translasisoal.html
+++ b/transformasi/latihansoal/translasisoal.html
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="row mb-3">
           <div class="col text-center">
-            <h2>Latihan Soal Translasig</h2>
+            <h2>Latihan Soal Translasi</h2>
            <i>Math_Dosman</i>
           </div>
         </div>
